--- a/public/views/import_csv_shp.html
+++ b/public/views/import_csv_shp.html
@@ -51,15 +51,7 @@
           <!-- Begin Page Content -->
           <div class="container-fluid">
             <!-- Page Heading -->
-            <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-            <p class="mb-4">
-              DataTables is a third party plugin that is used to generate the
-              demo table below. For more information about DataTables, please
-              visit the
-              <a target="_blank" href="https://datatables.net"
-                >official DataTables documentation</a
-              >.
-            </p>
+            <h1 class="h3 mb-3 text-gray-800">Import CSV SAP</h1>
 
             <!-- Form Input Kategori -->
             <div class="card shadow mb-4">
@@ -91,7 +83,13 @@
                     />
                   </div>
 
-                  <button type="submit" class="btn btn-danger">Simpan</button>
+                  <button
+                    id="button_submit"
+                    type="submit"
+                    class="btn btn-danger"
+                  >
+                    Simpan
+                  </button>
                 </form>
               </div>
             </div>
@@ -300,6 +298,7 @@
       }
       $(document).ready(function () {
         $("#importcsv").on("submit", async function (e) {
+          $("#button_submit").hide();
           const form = document.getElementById("importcsv");
           e.preventDefault();
           try {
@@ -318,6 +317,7 @@
               window.location.reload();
             }, 1000);
           } catch (error) {
+            $("#button_submit").show();
             alertify.alert("Terjadi Kesalahan!", error.message);
           }
         });
