--- a/public/views/materials_id.html
+++ b/public/views/materials_id.html
@@ -25,6 +25,12 @@
 
     <!-- Custom styles for this template-->
     <link href="/css/sb-admin-2.min.css" rel="stylesheet" />
+    <!-- JavaScript -->
+
+<!-- CSS -->
+<link rel="stylesheet" href="/vendor/alerty/css/alertify.min.css" />
+<!-- Default theme -->
+<link rel="stylesheet" href="/vendor/alerty/css/themes/default.min.css" />
   </head>
 
   <body id="page-top">
@@ -57,8 +63,12 @@
                       <!-- Detail Barang -->
                       <div class="col-md-8">
                         <p>
-                          <strong>Kategori :</strong> <%=
+                          <strong>Kategori Barang :</strong> <%=
                           data.material.category.name %>
+                        </p>
+                        <p>
+                          <strong>Kategori Gudang :</strong> <%=
+                          data.material.valuation_class.valuation_description %>
                         </p>
                         <p>
                           <strong>ID Material :</strong> <%=
@@ -71,14 +81,27 @@
                           data.material.material_description %>
                         </p>
                         <p>
-                          <strong>Jumlah Stok Tersedia :</strong>
+                          <strong>Jumlah Stok Tersedia (SAP*) :</strong>
                           <span class="text-success"
                             ><%= data.material.jumlah %> <%=
                             data.material.satuan %></span
                           >
                         </p>
-                        <p><strong>Deskripsi :</strong> -</p>
-                        <p><strong>Lokasi Rak :</strong> -</p>
+                        <p>
+                          <strong>Jumlah Stok Fisik :</strong>
+                          <span class="text-success"
+                            ><%= data.material.jumlah_stok_fisik %> <%=
+                            data.material.satuan %></span
+                          >
+                        </p>
+                        <p><strong>Lokasi Rak :</strong> <%= data.material.location %></span
+                          ></p>
+                        <p>
+                          <strong>Di Update Pada :</strong>
+                          <span class="text-warning"
+                            ><%= data.material.update_at %></span
+                          >
+                        </p>
                       </div>
 
                       <!-- Gambar Barang -->
@@ -92,7 +115,6 @@
                       </div>
                     </div>
                   </div>
-
                   <!-- Tombol Aksi -->
                   <div class="card-footer text-right">
                     <a class="btn btn-danger btn-sm" href="/materials">
@@ -103,8 +125,59 @@
               </div>
             </div>
           </div>
+          <form id="id-update">
+            <div class="container-fluid">
+            <!-- Page Heading -->
+            <h1 class="h3 mb-4 text-gray-800">Update Stok & Lokasi Rak</h1>
+
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="card shadow mb-4">
+                  <div class="card-body">
+                    <div class="row">
+                      <!-- Detail Barang -->
+                      <div class="col-md-12">
+                  
+                 
+                  <div class="form-group ">
+                    <label for="jumlah_stok_fisik_edit">Jumlah Stok Fisik</label>
+                    <div class="d-flex justify-content-start">
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="jumlah_stok_fisik_edit"
+                        name="jumlah_stok_fisik_edit"
+                        placeholder="Jumlah"
+                        value="<%= data.material.jumlah_stok_fisik %>"
+                      />
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <label for="location_edit">Lokasi Rak</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="location_edit"
+                      name="location_edit"
+                      placeholder="Masukkan Lokasi"
+                      value="<%= data.material.location %>"
+                    />
+                  </div>
+                  <div class="form-group">
+                    <button class="btn btn-danger float-right" type="submit">Simpan</button>
+                  </div>
+                    </div class="form-group p-3">
+                    
+                    </div>
+                  </div>
+                 
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- /.container-fluid -->
         </div>
+          </form>
         <!-- End of Main Content -->
 
         <!-- Footer -->
@@ -133,5 +206,43 @@
 
     <!-- Custom scripts for all pages-->
     <script src="/js/sb-admin-2.min.js"></script>
+    <script src="/vendor/alerty/alertify.min.js"></script>
+
+    <script>
+      $(document).ready(function () {
+        $("#id-update").on("submit", async function (e) {
+          e.preventDefault();
+          try {
+            const data = {
+              jumlah_stok_fisik: e.target.jumlah_stok_fisik_edit.value,
+              id: "<%=data.material.id%>",
+              location: e.target.location_edit.value
+            };
+
+            for (const key in data) {
+              if (!data[key])
+                throw new Error(key.toUpperCase() + " Diperlukan");
+            }
+            data.kode_kategori = undefined;
+            const response = await fetch("/api/materials/public", {
+              method: "PUT",
+              headers: {
+                Accept: "application/json",
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify(data),
+            });
+            const resJson = await response.json();
+            if (resJson.error) throw new Error(resJson.message);
+            alertify.success(resJson.message);
+            setTimeout(() => {
+              window.location.reload();
+            }, 1000);
+          } catch (error) {
+            alertify.error(error.message);
+          }
+        });
+      });
+    </script>
   </body>
 </html>
